# transcription-whisper

./: .gitignore  README.md  constants.py  help.txt  main.py  requirements.txt
whisper-transcribe-cli/: pyproject.toml  setup.py
whisper-transcribe-cli/transcriptor/: cli.py
